--- a/spot/vremotes/origin/v1/en/index.html
+++ b/spot/vremotes/origin/v1/en/index.html
@@ -645,7 +645,7 @@
 <li>Signature: sign = hmac.New(client_key, sign_str, sha256)</li>
 <li>Content-Type: application/x-www-form-urlencoded</li>
 <li>Coin/Innovation Zone interface, please put the parameters in the request body for the post interface request, and carry the get interface request in the url link</li>
-<li>钱包账户接口，请将鉴权信息放在header头部信息，HOO-KEY = api key，Hoo-Sign = sign，Hoo-Timestamp = ts</li>
+<li>Wallet account interface, please put the authentication information in the header header information, HOO-KEY = api key, Hoo-Sign = sign, Hoo-Timestamp = ts</li>
 <li>API key has up to 5 white list IP addresses</li>
 </ol>
 <h1 id='wallet-account-api-2'>Wallet account API</h1><h2 id='get-currency-information-interface'>Get currency information interface</h2>
