--- a/spot/v1/en/index.html
+++ b/spot/v1/en/index.html
@@ -392,6 +392,8 @@
 
 <p>The code will display on the right side of this document. Currently we only provide &quot;shell&quot; code examples.</p>
 
+<p>It can be accessed using the following domain names: api.hoolgd.com</p>
+
 <p>Welcome all professional maker strategies and organizations for long term market making program.</p>
 <h2 id='wallet-account-api'>Wallet Account API</h2>
 <p>Eligible to access portals:</p>
