--- a/spot/v1/en/index.html
+++ b/spot/v1/en/index.html
@@ -2301,8 +2301,8 @@ Innovate
 <tr>
 <td style="text-align: center">price</td>
 <td style="text-align: center">string</td>
-<td style="text-align: center">yes</td>
-<td style="text-align: center">price</td>
+<td style="text-align: center">no</td>
+<td style="text-align: center">price, if order type is LIMIT,Required</td>
 </tr>
 <tr>
 <td style="text-align: center">quantity</td>
@@ -2314,7 +2314,13 @@ Innovate
 <td style="text-align: center">side</td>
 <td style="text-align: center">int</td>
 <td style="text-align: center">yes</td>
-<td style="text-align: center">Direction，1 buy，-1 sell</td>
+<td style="text-align: center">Direction, 1 buy, -1 sell</td>
+</tr>
+<tr>
+<td style="text-align: center">order_type</td>
+<td style="text-align: center">string</td>
+<td style="text-align: center">no</td>
+<td style="text-align: center">Direction, limit(default), market</td>
 </tr>
 </tbody></table>
 
@@ -3667,7 +3673,7 @@ Innovate
 </span><span class="s"># Innovate</span><span class="err">
 </span><span class="s"># path = "/open/innovate/v1/orders/place"</span><span class="err">
 </span><span class="s">obj = gen_sign(client_id, client_key)</span><span class="err">
-</span><span class="s">obj.update({"symbol": "BTC-USDT", "price": "8850.21", "quantity": "0.1", "side": "1"})</span><span class="err">
+</span><span class="s">obj.update({"symbol": "BTC-USDT", "price": "8850.21", "quantity": "0.1", "side": "1", "order_type": "LIMIT"})</span><span class="err">
 </span><span class="s">res = requests.post(host + path, data=obj)</span><span class="err">
 </span><span class="s">print(ujson.loads(res.content))</span><span class="err">
 </span></code></pre><h1 id='websocket-example'>Websocket Example</h1>
